# WorldViewer

./: .gitignore  CMakeLists.txt
res/shaders/: basicLighting.frag  basicLighting.vert  colorShader.frag  colorShader.vert  greyShader.frag  normalDisplay.frag  normalDisplay.geom  normalDisplay.vert  skybox.shader  solidWireframeTransparent.frag  solidWireframeTransparent.geom  solidWireframeTransparent.vert  wireframe.geom  wireframe.vert
res/textures/skyboxes/: decomposeSkybox.cpp
src/: Camera.hpp  InputManager.cpp  InputManager.hpp  Mesh.cpp  Mesh.hpp  Player.cpp  Player.hpp  Shader.cpp  Shader.hpp  Skybox.hpp  World.cpp  World.hpp  glUtil.cpp  glUtil.hpp  main.cpp  util.hpp
src/engine/: Mesh.hpp  Transform.cpp  Transform.hpp  Transformable.cpp  Transformable.hpp
src/generator/: main.cpp
